--- a/packages/core/src/sass/real-account-signup.scss
+++ b/packages/core/src/sass/real-account-signup.scss
@@ -22,6 +22,9 @@
         height: calc(100% - 57px);
         position: relative;
         width: 100%;
+        &__mf {
+            height: 100%;
+        }
     }
 }
 
